--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ body {
     grid-template-columns: 80vw;
     background-color: wheat;
 }
+header {
+    grid-row: 1;
+}
 
 board {
     grid-row:  2;
@@ -21,5 +24,14 @@ board {
 
 box {
     border: 4px solid black;
-    padding: 2px
+    padding: 2px;
+    /* background-color: red */
+}
+
+.player1 {
+    background-color: red;
+    
+}
+.player2 {
+    background-color: blue;
 }
