--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 body {
     display: grid;
     height: 100vh;
-    grid-template-rows: 100px 1fr 100px;
+    grid-template-rows: 150px 1fr 100px;
     grid-template-columns: 80vw;
     background-color: wheat;
 }
 header {
     grid-row: 1;
+    text-align: center;
 }
 
 board {
@@ -23,7 +24,7 @@ board {
 }
 
 box {
-    border: 4px solid black;
+    border: 2px solid black;
     padding: 2px;
     /* background-color: red */
 }
@@ -34,4 +35,14 @@ box {
 }
 .player2 {
     background-color: blue;
+    color: white;
+}
+
+button{
+    height: 30px;
+    /* padding: 20px; */
+}
+
+.playerturn{
+    min-width: 100px;
 }
